[package]
name = "comdex-mint"
version = "0.2.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all init/handle/query exports
library = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer:0.12.3
"""

[dependencies]
cw0 = "0.10.3"
cw2 = "0.11.1"
cw20 = "0.11.1"
cw20-base = { version = "0.11.1", features = ["library"]}
cw-storage-plus  = "0.11.1"
cosmwasm-storage = "1.0.0-beta4"
cosmwasm-schema = "1.0.0-beta4"
cw20-legacy = { version = "0.2.0", features = ["library"]}
cosmwasm-std = { version = "1.0.0-beta4" }
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.23" }